fix: improve filters UI on mobile

--- a/src/view/AppLayoutView.css
+++ b/src/view/AppLayoutView.css
@@ -24,8 +24,8 @@
 
 .app.mobile .floating-search-container {
     bottom: 1em;
-    left: 1em;
-    right: 1em;
+    left: 0.25em;
+    right: 0.25em;
     height: 3em;
     position: fixed;
     display: flex;
@@ -38,10 +38,13 @@
     background-color: #ffffffe6;
     color: black;
     height: 3em;
-    padding-left: 1em;
-    padding-right: 1em;
-    border-radius: 2em;
-    box-shadow: 0 0 1em 0em #000000e0;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+    margin-left: 0.12em;
+    margin-right: 0.12em;
+    border-radius: 0.75em;
+    border: 1px solid black;
+    /*box-shadow: 0 0 1em 0em #000000e0;*/
     display: flex;
     align-items: center;
     justify-content: center;
@@ -56,7 +59,7 @@
     color: white;
     width: 1.25em;
     text-align: center;
-    border-radius: 0.5em;
+    border-radius: 0.75em;
     padding: 0.1em;
     font-size: 75%;
     position: absolute;
